--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+###
+# @siemens/html-test-app
+###
+
+packages/html-test-app/public/additional-theme
+
 # compiled output
 /dist
 /tmp
