--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -9,7 +9,7 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
-    "rimraf": "rimraf ./static/webcomponent-examples/lib/ix && rimraf ./static/webcomponent-examples/lib/ix-brand-theme && rimraf ./static/webcomponent-examples/lib/ix-icons && rimraf ./static/webcomponent-examples/lib/ix-aggrid",
+    "rimraf": "rimraf ./static/webcomponent-examples/*",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
@@ -27,7 +27,7 @@
     "@siemens/ix": "~1.0.0",
     "@siemens/ix-react": "~1.0.0",
     "@siemens/ix-echarts": "~1.0.0",
-    "html-test-app": "~1.0.0",
+    "@siemens/html-test-app": "~1.0.0",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
