--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-###
-# @siemens/html-test-app
-###
 
-packages/html-test-app/public/additional-theme
 
 # compiled output
 /dist
@@ -45,11 +41,6 @@ testem.log
 .DS_Store
 Thumbs.db
 
-dist/
-www/
-loader/
-dist-transpiled/
-build/
 
 *~
 *.sw[mnpcod]
@@ -94,7 +85,6 @@ coverage
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
 /tmp
 /out-tsc
 
@@ -153,3 +143,25 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+###
+# Build output
+##
+packages/*/dist/
+packages/*/www/
+packages/*/loader/
+packages/*/dist-transpiled/
+packages/*/build/
+
+###
+# @siemens/html-test-app
+###
+
+packages/html-test-app/src/public/additional-theme
+
+###
+# documentation
+###
+
+packages/documentation/static/webcomponent-examples/*
+!packages/documentation/static/versioned_examples/*/webcomponent-examples
