--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,7 +1,22 @@
 name: Deploy to GitHub Pages
 
-on: workflow_dispatch
-
+on:
+  workflow_dispatch:
+    inputs:
+      confirm_deployment:
+        description: 'Please confirm DEV deployment'
+        required: true
+        type: boolean
+      repo_url:
+        description: 'Documentation repository'
+        required: true
+        default: danielleroux/docs-instance
+        type: string
+      prefix:
+        description: 'Documentation prefix'
+        required: true
+        default: docs-instance
+        type: string
 jobs:
   deploy:
     name: Deploy to GitHub Pages
@@ -14,26 +29,34 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/build
-        with:
-          filter: '\!documentation'
-      - name: 'Install brand theme'
+      - name: 'Download @siemens/ix-brand-theme'
         run: |
-          rm .yarnrc
+          ROOT=$(pwd)
+          cd ./packages/html-test-app/src/public/additional-theme
           echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
           echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
-          npm install @siemens/ix-brand-theme --no-save
-          rm .npmrc
-          rm ./packages/documentation/static/.gitignore
+          curl --header "PRIVATE-TOKEN: ${{ secrets.READ_CSC_TOKEN }}" $(yarn info @siemens/ix-brand-theme dist.tarball | sed -n 2p) -o ix-brand-theme.tgz
+          tar zxvf ix-brand-theme.tgz
+          mv package ix-brand-theme
+          rm ix-brand-theme.tgz
+          sed -i -e '/\"publishConfig\"/,/}/ d; /^$/d' ix-brand-theme/package.json
+          rm ix-brand-theme/package.json-e
+          cp -R ./ix-brand-theme $ROOT/node_modules/@siemens
 
-      - name: 'Build documentation'
+      - name: 'Build documentation for DEV instance'
         run: |
-          yarn workspace documentation run build
-      - name: 'Copy documentation'
+          BASE_URL=${{ github.input.prefix }} yarn workspace documentation run build
+
+      - name: 'Copy DEV documentation'
         run: |
+          mkdir -p ./public/dev
           cp -R ./packages/documentation/build/. ./public
-      - name: Deploy to GitHub Pages
+
+      - name: Deploy documentation to DEV instance
+        if: ${{ github.input.confirm_deployment == true }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_key: ${{ secrets.DEPLOY_PAGES_DL }}
+          external_repository: ${{ github.input.repo_url }}
           publish_dir: ./public
-          cname: ix.siemens.io
