--- a/.github/workflows/deploy-pages-dev.yml
+++ b/.github/workflows/deploy-pages-dev.yml
@@ -29,8 +29,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/build
+        with:
+          filter: '\!documentation'
       - name: 'Download @siemens/ix-brand-theme'
         run: |
+          rm .yarnrc
           ROOT=$(pwd)
           cd ./packages/html-test-app/src/public/additional-theme
           echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
