ci(deploy-pages): add base url

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -15,7 +15,7 @@ on:
       prefix:
         description: 'Documentation prefix'
         required: true
-        default: docs-instance
+        default: '/docs-instance/'
         type: string
 jobs:
   deploy:
