ci(deploy-pages): use event object for inputs

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -29,9 +29,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: 'Start deployment'
         run: |
-          echo ${{ input.confirm_deployment }}
-          echo ${{ input.prefix }}
-          echo ${{ input.repo_url }}
+          echo ${{ github.event.inputs.confirm_deployment }}
+          echo ${{ github.event.inputs.prefix }}
+          echo ${{ github.event.inputs.repo_url }}
       - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/build
         with:
@@ -50,7 +50,7 @@ jobs:
 
       - name: 'Build documentation for DEV instance'
         run: |
-          BASE_URL=${{ input.prefix }} yarn workspace documentation run build
+          BASE_URL=${{ github.event.inputs.prefix }} yarn workspace documentation run build
 
       - name: 'Copy DEV documentation'
         run: |
@@ -58,10 +58,10 @@ jobs:
           cp -R ./packages/documentation/build/. ./public
 
       # - name: Deploy documentation to DEV instance
-      #   if: ${{ input.confirm_deployment }}
+      #   if: ${{ github.event.inputs.confirm_deployment }}
       #   uses: peaceiris/actions-gh-pages@v3
       #   with:
       #     github_token: ${{ secrets.GITHUB_TOKEN }}
       #     deploy_key: ${{ secrets.DEPLOY_PAGES_DL }}
-      #     external_repository: ${{ input.repo_url }}
+      #     external_repository: ${{ github.event.inputs.repo_url }}
       #     publish_dir: ./public
