ci(deploy-pages): fix inputs path in all workflows

--- a/.github/workflows/deploy-pages-dev.yml
+++ b/.github/workflows/deploy-pages-dev.yml
@@ -15,7 +15,7 @@ on:
       prefix:
         description: 'Documentation prefix'
         required: true
-        default: docs-instance
+        default: /docs-instance/
         type: string
 jobs:
   deploy:
@@ -42,11 +42,10 @@ jobs:
           cp -R ./node_modules/@siemens/ix-brand-theme ./packages/html-test-app/src/public/additional-theme
           sed -i -e '/\"publishConfig\"/,/}/ d; /^$/d' ./packages/html-test-app/src/public/additional-theme/ix-brand-theme/package.json
           rm ./packages/html-test-app/src/public/additional-theme/ix-brand-theme/package.json-e || true
-          ls ./packages/html-test-app/src/public/additional-theme/ix-brand-theme/
 
       - name: 'Build documentation for DEV instance'
         run: |
-          BASE_URL=${{ github.input.prefix }} yarn workspace documentation run build
+          BASE_URL=${{ github.event.inputs.prefix }} yarn workspace documentation run build
 
       - name: 'Copy DEV documentation'
         run: |
@@ -54,10 +53,10 @@ jobs:
           cp -R ./packages/documentation/build/. ./public
 
       - name: Deploy documentation to DEV instance
-        if: ${{ github.input.confirm_deployment == true }}
+        if: ${{ github.event.inputs.confirm_deployment }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.DEPLOY_PAGES_DL }}
-          external_repository: ${{ github.input.repo_url }}
+          external_repository: ${{ github.event.inputs.repo_url }}
           publish_dir: ./public
