--- a/.github/workflows/deploy-pages-dev.yml
+++ b/.github/workflows/deploy-pages-dev.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/build
         with:
-          filter: '\!documentation'
+          filter: '\!documentation --filter \!@siemens/html-test-app'
       - name: 'Download @siemens/ix-brand-theme'
         run: |
           rm .yarnrc
@@ -45,6 +45,7 @@ jobs:
 
       - name: 'Build documentation for DEV instance'
         run: |
+          yarn workspace @siemens/html-test-app run build
           BASE_URL=${{ github.event.inputs.prefix }} yarn workspace documentation run build
 
       - name: 'Copy DEV documentation'
@@ -56,7 +57,6 @@ jobs:
         if: ${{ github.event.inputs.confirm_deployment }}
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          deploy_key: ${{ secrets.DEPLOY_PAGES_DL }}
+          personal_token: ${{ secrets.DEPLOY_DEV_PAGES_TOKEN }}
           external_repository: ${{ github.event.inputs.repo_url }}
           publish_dir: ./public
