--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -15,7 +15,7 @@ on:
       prefix:
         description: 'Documentation prefix'
         required: true
-        default: '/docs-instance/'
+        default: /docs-instance/
         type: string
 jobs:
   deploy:
@@ -30,7 +30,7 @@ jobs:
       - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/build
         with:
-          filter: '\!documentation'
+          filter: '\!documentation --filter \!@siemens/html-test-app'
       - name: 'Download @siemens/ix-brand-theme'
         run: |
           rm .yarnrc
@@ -45,6 +45,7 @@ jobs:
 
       - name: 'Build documentation for DEV instance'
         run: |
+          yarn workspace @siemens/html-test-app run build
           BASE_URL=${{ github.event.inputs.prefix }} yarn workspace documentation run build
 
       - name: 'Copy DEV documentation'
