--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -1,5 +1,12 @@
 {
   "name": "@siemens/ix-aggrid",
+  "homepage": "https://ix.siemens.io",
+  "bugs": "https://github.com/siemens/ix/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/siemens/ix",
+    "directory": "packages/aggrid"
+  },
   "description": "AG Grid theme based on ix theme variables",
   "version": "1.0.0",
   "main": "dist/index.cjs.js",
@@ -11,6 +18,8 @@
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/aggrid/aggrid.esm.js",
   "files": [
+    "LICENSE",
+    "README.md",
     "dist/",
     "loader/"
   ],
