--- a/packages/echarts/package.json
+++ b/packages/echarts/package.json
@@ -1,5 +1,12 @@
 {
   "name": "@siemens/ix-echarts",
+  "homepage": "https://ix.siemens.io",
+  "bugs": "https://github.com/siemens/ix/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/siemens/ix",
+    "directory": "packages/echarts"
+  },
   "version": "1.0.0",
   "description": "Siemens iX theme for echarts",
   "main": "dist/index.js",
