--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "ix",
   "version": "1.0.0",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "MIT",
   "description": "Siemens iX monorepo",
   "author": "Siemens AG",
   "homepage": "https://www.github.com/siemens/ix",
