--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -30,12 +30,37 @@ jobs:
             packages/**/www
             packages/**/loader
             packages/**/build
-      - name: Publish beta version to npmjs.org
+
+      - name: Publish ix beta version to npmjs.org
         run: |
           yarn workspace @siemens/ix publish --access public --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish ix-react beta version to npmjs.org
+        run: |
           yarn workspace @siemens/ix-react publish --access public --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish ix-aggrid beta version to npmjs.org
+        run: |
           yarn workspace @siemens/ix-aggrid publish --access public --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish ix-echarts beta version to npmjs.org
+        run: |
           yarn workspace @siemens/ix-echarts publish --access public --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish ix-angular beta version to npmjs.org
+        run: |
           cd packages/angular/dist
           yarn publish --access public --tag beta
         env:
