--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,10 @@ jobs:
             packages/**/loader
             packages/**/build
 
-
   upload-artifacts:
     runs-on: ubuntu-latest
     needs: [build]
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
         id: build
