--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
-        id: build
+        id: build-cache
         with:
           key: build-${{ runner.os }}-${{ github.sha }}
           path: |
